--- a/drive/.vscode/settings.json
+++ b/drive/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "cstdio": "c"
+        "cstdio": "c",
+        "fs.h": "c",
+        "timer.h": "c"
     }
 }
