--- a/drive/.vscode/settings.json
+++ b/drive/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "cstdio": "c",
         "fs.h": "c",
-        "timer.h": "c"
+        "timer.h": "c",
+        "kernel.h": "c",
+        "module.h": "c"
     }
 }
